add styling to patients section

--- a/html/patients.html
+++ b/html/patients.html
@@ -38,7 +38,7 @@ weight: 2
 
     {% include organisms/contact.html %}
 
-    <section class="first-visit background-light-purple section-margins">
+    <section class="first-visit background-light-purple section-margins section-padding">
         <div class="first-visit__content clearfix">
             <div class="heading first-visit__heading">
                 <h2>The First Dental Visit</h2>
@@ -46,7 +46,7 @@ weight: 2
 
             <div class="row">
                 <div class="col-md-6">
-                    <img src="" alt="">
+                    <img src="images/kollmann-interaction.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>For some children and parents, the first visit to the dentist can be a stressful situation.
@@ -78,7 +78,7 @@ weight: 2
         </div>
     </section>
 
-    <section class="comfort background-light-purple section-margins">
+    <section class="comfort background-light-purple section-margins section-padding">
         <div class="comfort__content clearfix">
             <div class="heading comfort__heading">
                 <h2>Patient Comfort</h2>
