--- a/html/patients.html
+++ b/html/patients.html
@@ -75,51 +75,21 @@ weight: 2
 
                 <div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
-                    <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-1"
-                        aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1"><span
-                            class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-                            class="fa fa-check-square-o"></i> Cosmetic Dentistry</h3>
-                    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-2"
+                    {% for item in site.data.services.items %}
+
+                        <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-{{ forLoop.index*2-1 }}"
+                            aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1"><span
+                                class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
+                                class="fa fa-check-square-o"></i> {{ item.question }}</h3>
+                        <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom {% if forLoop.first %}ui-accordion-content-active{% else %}folded{% endif %}" id="ui-id-{{ forLoop.index*2 }}"
                          aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="true">
-                        <p>Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns.
-                            We have many options, so please call us for a free cosmetic&nbsp;consultation.</p>
-                        <p class="nobottommargin">A beautiful, bright, healthy smile can increase self confidence and overall
-                            life satisfaction.</p>
+
+                        {% for answer in item.answers %}
+                            <p {% if forLoop.last %}class="nobottommargin"{% endif %}>{{ answer }}</p>
+                        {% endfor %}
                     </div>
 
-                    <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-3"
-                        aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span
-                            class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-                            class="fa fa-check-square-o"></i> Crowns &amp; bridges</h3>
-                    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-4"
-                         aria-labelledby="ui-id-3" role="tabpanel" aria-hidden="true">
-                        <p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile.</p>
-                        <p class="nobottommargin">Made to perfectly match the shape and shade of your other teeth, they’re
-                            durable, strong, and&nbsp;undetectable.</p>
-                    </div>
-
-                    <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-5"
-                        aria-controls="ui-id-6" aria-selected="false" aria-expanded="false" tabindex="-1"><span
-                            class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-                            class="fa fa-check-square-o"></i> Oral sedation</h3>
-                    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-6"
-                         aria-labelledby="ui-id-5" role="tabpanel" aria-hidden="true">
-                        <p class="nobottommargin">Sedation dentistry is an excellent treatment for patients with extensive
-                            dental needs, or who are concerned about anxiety, difficulty getting numb, or
-                            sensitive&nbsp;teeth.</p>
-                    </div>
-
-                    <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top"
-                        role="tab" id="ui-id-7" aria-controls="ui-id-8" aria-selected="true" aria-expanded="true"
-                        tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span><i
-                            class="fa fa-check-square-o"></i> Smile whitening</h3>
-                    <div
-                            class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active"
-                            id="ui-id-8" aria-labelledby="ui-id-7" role="tabpanel" aria-hidden="false">
-                        <p class="nobottommargin">Many everyday things like coffee, tea and wine can significantly dull teeth.
-                            Smile-whitening enables us to significantly brighten your smile for that dazzling white smile you
-                            deserve.</p>
-                    </div>
+                    {% endfor %}
 
                 </div>
 
