--- a/html/patients.html
+++ b/html/patients.html
@@ -68,34 +68,37 @@ weight: 2
         </div>
     </section>
 
-    <section class="qa clearfix section-margins">
-        <div class="qa-content">
+    <section class="qa clearfix section-margins section-padding background-light-green">
+        <div class="qa__wrapper">
             <div class="heading qa__heading">
+                <h2>Parent Questions  & Answers</h2>
+            </div>
+        </div>
 
+        <div class="qu_content">
+            <!--Accordion-->
+            <div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
-                <div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
+                {% for item in site.data.services.items %}
 
-                    {% for item in site.data.services.items %}
+                <h3 class="qa__question ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-{{ forLoop.index*2-1 }}"
+                    aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1">
+                    <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e">
+                    </span><i class="qa__icon fa fa-check-square-o"></i> {{ item.question }}</h3>
+                <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom {% if forLoop.first %}ui-accordion-content-active{% else %}folded{% endif %}" id="ui-id-{{ forLoop.index*2 }}"
+                     aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="true">
 
-                        <h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-{{ forLoop.index*2-1 }}"
-                            aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1"><span
-                                class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-                                class="fa fa-check-square-o"></i> {{ item.question }}</h3>
-                        <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom {% if forLoop.first %}ui-accordion-content-active{% else %}folded{% endif %}" id="ui-id-{{ forLoop.index*2 }}"
-                         aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="true">
-
-                        {% for answer in item.answers %}
-                            <p {% if forLoop.last %}class="nobottommargin"{% endif %}>{{ answer }}</p>
-                        {% endfor %}
-                    </div>
-
+                    {% for answer in item.answers %}
+                        <p class="qa__answer {% if forLoop.last %}nobottommargin{% endif %}">{{ answer }}</p>
                     {% endfor %}
 
                 </div>
 
+                {% endfor %}
+
             </div>
-            <h1>Accordian QA List goes here</h1>
         </div>
+
     </section>
 
     <section class="comfort background-light-purple section-margins section-padding">
