style the q and a section

--- a/html/patients.html
+++ b/html/patients.html
@@ -108,7 +108,7 @@ weight: 2
             </div>
 
             <div class="col-md-6">
-                <img src="" alt="">
+                <img src="images/patient-comfort.jpg" alt="Smiling young girl">
             </div>
             <div class="col-md-6">
                 <p>Our office was designed for infants, children and teens. From the arcade games in the waiting room to
