add better spacing to the styling of the headers and reordered the team bios so the photos stack correctly with responsive bootstrap

--- a/html/team.html
+++ b/html/team.html
@@ -26,7 +26,7 @@ weight: 1
             <div class="background-light-purple">
                 <div class="container">
                     <div class="row furusho">
-                        <div class="col-sm-3 furusho__image_">
+                        <div class="col-sm-3 furusho__image">
                             <img src="images/bios/furusho-bio.jpg" alt="">
                         </div>
                         <div class="col-sm-9 furusho-bio">
@@ -47,7 +47,10 @@ weight: 1
             </div>
             <div class="container">
                 <div class="row kollman">
-                    <div class="col-sm-9 kollman-bio">
+                    <div class="col-sm-3 col-sm-push-9 kollman__image">
+                        <img src="images/bios/kollmann-bio.jpg" alt="">
+                    </div>
+                    <div class="col-sm-9 col-sm-pull-3 kollman-bio">
                         <h3>Kirk B. Kollman, DMD</h3>
                         <p>Dr. Kirk Kollmann graduated from the University of Florida College of Dentistry and received his
                             pediatric dental degree from Children's Hospital of Michigan in Detroit. Keeping with his
@@ -58,9 +61,6 @@ weight: 1
                             is involved in various aspects of organized dentistry. He loves to be the do-it-yourself
                             craftsman, being proficient in electricity, carpentry, woodworking, plumbing, etc. Computers and
                             gadgets are another one of his hobbies. He holds great respect for his partner Dr. Furusho.</p>
-                    </div>
-                    <div class="col-sm-3 kollman__image_">
-                        <img src="images/bios/kollmann-bio.jpg" alt="">
                     </div>
                 </div>
             </div>
