clean up the carousel on the home page, styling, remove arrows

--- a/html/index.html
+++ b/html/index.html
@@ -16,19 +16,24 @@ weight: 0
         <div class="marquee__slide" style="background-image: url('images/slide1.jpg');">
           <div class="marquee__slide-wrapper">
             <div class="slide--text-left container">
-              <h1>Creating happy healthy smiles</h1>
-              <h1>one child at a time</h1>
-              <h2>Now Welcoming</h2>
-              <h2>New Patients</h2>
-              <a href="" class="btn btn--inverted">New Patient Offers</a>
+              <div class="row">
+                <div class="col-md-6">
+                  <h1 class="marquee__main-text">Creating happy healthy smiles one child at a time</h1>
+                  <h3 class="marquee__byline uppercase">Now Welcoming</h3>
+                  <h3 class="marquee__byline uppercase">New Patients</h3>
+                  <a href="" class="btn btn--inverted">New Patient Offers</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="marquee__slide" style="background-image: url('images/slide3.jpg');">
           <div class="marquee__slide-wrapper">
             <div class="container">
-              <div class="col-md-5 col sm-6">
-                {% include molecule/stars.html stars=5 %}
+              <div class="col-md-5 col-sm-6">
+                <div class="marquee__stars">
+                  {% include molecule/stars.html stars=5 %}
+                </div>
                 <div class="marquee__quote">
                   <h3>“My three kids love them. Great team, very organized operation and state of the art technology is a
                     recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h3>
