--- a/html/services.html
+++ b/html/services.html
@@ -23,9 +23,11 @@ weight: 3
             </div>
 
             <div class="row">
-                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/frenectomy.jpg" alt="">
-                    <h6>Infant Frenectomy</h6>
-                </div>
+                <a href="#" data-toggle="modal" data-target="#smile-modal" class="read-more">
+                    <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/frenectomy.jpg" alt="">
+                        <h6>Infant Frenectomy</h6>
+                    </div>
+                </a>
                 <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/fillings.jpg" alt="">
                     <h6>Fillings</h6>
                 </div>
@@ -55,6 +57,24 @@ weight: 3
                 </div>
                 <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/digital-xrays.jpg" alt="">
                     <h6>Digital x-Rays</h6>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services-modals">
+        <div class="modal fade" id="smile-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Smile Makeovers</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Getting a smile makeover is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Smile makeovers can encompass things such as adult orthodontics, tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
