hookup modals for the services page

--- a/html/patients.html
+++ b/html/patients.html
@@ -79,7 +79,7 @@ weight: 2
             <!--Accordion-->
             <div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
-                {% for item in site.data.services.items %}
+                {% for item in site.data.questions.items %}
 
                 <h3 class="qa__question ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-{{ forLoop.index*2-1 }}"
                     aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1">
