--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@ weight: 0
           <div class="marquee__slide-wrapper">
             <div class="slide--text-left container">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-8">
                   <h1 class="marquee__main-text">Creating happy healthy smiles one child at a time</h1>
                   <h3 class="marquee__byline uppercase">Now Welcoming</h3>
                   <h3 class="marquee__byline uppercase">New Patients</h3>
@@ -52,7 +52,7 @@ weight: 0
 
   <section class="about">
     <div class="about__content container clearfix">
-      <div class="about__first-section">
+      <div class="background-light-green about__first-section">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
             <h5 class="about__lead-quote">We’ve been fortunate to help thousands of kids grow into fearless adult patients who enjoy visiting the dentist. We would be honored if you stopped by for a free office tour with your child, and give us an opportunity to earn your trust.</h5>
@@ -61,8 +61,8 @@ weight: 0
         </div>
       </div>
       <div class="about__second-section">
-        <div class="about__img">
-          <img src="" alt="">
+        <div class="about__image center">
+          <img src="images/circle-bios.jpg" alt="Kollman and Furusho">
         </div>
         <div class="row">
           <div class="col-md-6 about__more">
