--- a/html/index.html
+++ b/html/index.html
@@ -86,30 +86,34 @@ weight: 0
     </div>
   </section>
 
-  <section class="specials">
-    <div class="specials__heading heading heading--small">
-      <h2>New Patient Specials</h2>
-      <h4>Offers end September 20, 2016</h4>
+  <section class="specials section-padding" style="background-image: url('images/specials-bkgd.jpg');">
+    <div class="heading specials__heading heading--small">
+      <h2 class="font-accent-white">New Patient Specials</h2>
+      <h4 class="font-accent-white">Offers end September 20, 2016</h4>
     </div>
     <div class="specials__content">
-      <div class="row">
+      <div class="row row-height-wrapper">
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
-          <h3 class="font-accent-purple">Children's New Patient&nbsp;Dental Exam</h3>
-          <h2 class="font-accent-purple">$75</h2>
-          <p>Save $57</p>
-          <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a
-            comprehensive exam.</p>
-          <p>(D0150, D0272)</p>
+          <div>
+            <h3 class="font-accent-purple">Children's New Patient&nbsp;Dental Exam</h3>
+            <h2 class="font-accent-purple">$75</h2>
+            <p>Save $57</p>
+            <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a
+              comprehensive exam.</p>
+            <p>(D0150, D0272)</p>
+          </div>
         </div>
         <div class="specials__tile col-sm-6 col-md-4">
-          <h3 class="font-accent-purple">Children's Dental&nbsp;Cleaning and Fluoride</h3>
-          <h2 class="font-accent-purple">$45</h2>
-          <p>Save $52</p>
-          <p>Patients 12 and under receive a professional dental cleaning and topical varnish application. A new patient dental exam is required.</p>
-          <p>(D1120, D1208)</p>
+          <div>
+            <h3 class="font-accent-purple">Children's Dental&nbsp;Cleaning and Fluoride</h3>
+            <h2 class="font-accent-purple">$45</h2>
+            <p>Save $52</p>
+            <p>Patients 12 and under receive a professional dental cleaning and topical varnish application. A new patient dental exam is required.</p>
+            <p>(D1120, D1208)</p>
+          </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row row-height-wrapper">
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
           <h2 class="font-accent-purple">FREE</h2>
           <h3 class="font-accent-purple">Prenatal Consultation</h3>
