--- a/html/index.html
+++ b/html/index.html
@@ -54,8 +54,10 @@ weight: 0
     <div class="about__content clearfix">
       <div class="background-light-green about__first-section">
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
-            <h5 class="about__lead-quote">We’ve been fortunate to help thousands of kids grow into fearless adult patients who enjoy visiting the dentist. We would be honored if you stopped by for a free office tour with your child, and give us an opportunity to earn your trust.</h5>
+          <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2">
+            <h5 class="about__lead-quote">
+              <img src="images/quote-1.svg" alt="">
+              We’ve been fortunate to help thousands of kids grow into fearless adult patients who enjoy visiting the dentist. We would be honored if you stopped by for a free office tour with your child, and give us an opportunity&nbsp;to&nbsp;earn&nbsp;your&nbsp;trust.</h5>
             <p class="quoty">–Drs. Kirk Kollmann and Cissy Furusho</p>
           </div>
         </div>
