add marquee content, styling finished on frenectomy page

--- a/html/frenectomy.html
+++ b/html/frenectomy.html
@@ -10,6 +10,13 @@ weight: 4
 
     <section class="marquee" style="background-image: url('images/frenectomy-slide.jpg');">
         <div class="marquee__wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-8 frenectomy__title">
+                        <h1>Discover how this simple procedure can keep your baby smiling</h1>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section>
@@ -23,10 +30,10 @@ weight: 4
             </div>
 
             <div class="frenectomy__content row">
-                <div class="col-sm-3"><img src="images/frenectomy-photo.jpg" alt="frenectomy">
+                <div class="col-sm-4"><img src="images/frenectomy-photo.jpg" alt="frenectomy">
                 </div>
-                <div class="col-sm-9">
-                    <h4>What is a Lip Tie or Tongue Tie?</h4>
+                <div class="col-sm-8">
+                    <h4 class="frenectomy--byline-font">What is a Lip Tie or Tongue Tie?</h4>
                     <p>Well before your baby is born, you are committed to doing everything possible to help him or her
                         grow up happy, strong and healthy. Sometimes, you both need extra help to accomplish this, and
                         one common but easily treated problem some parents and infants face is a restrictive frenum.
@@ -35,7 +42,7 @@ weight: 4
                         frenum is the tissue under the tongue connecting the tongue to the floor of the mouth. The
                         maxillary labial frenum is the tissue attaching the upper lip to the mouth.</p>
                     <br>
-                    <h4>What is a Frenectomy?</h4>
+                    <h4 class="frenectomy--byline-font">What is a Frenectomy?</h4>
                     <p>For a newborn, lip-tie or tongue-tie can make breastfeeding difficult for the infant and painful
                         for the mother because the lip and/or tongue's limited movement prevents the infant from
                         properly latching on and drawing milk from the breast. If left untreated, it can eventually
