--- a/html/contact.html
+++ b/html/contact.html
@@ -2,24 +2,33 @@
 title: Contact
 layout: default
 link:
-    text: Contact
-    url: contact.html
+text: Contact
+url: contact.html
 weight: 5
 ---
 <div class="main-container container">
 
-    <section class="marquee  marquee--flex" style="background-image: url('images/services-masthead.jpg');">
-        <div class="marquee__wrapper">
-            <h1>Come Visit<br>Us Today!</h1>
+    <section class="marquee marquee--custom" style="background-image: url('images/services-masthead.jpg');">
+        <div class="marquee--flex">
+            <div class="marquee__wrapper">
+                <h1>Come Visit<br>Us Today!</h1>
+            </div>
+        </div>
+        <div class="smooth-scroll-btn marquee__scroll-down">
+            <a href="" data-href="#section__location">
+                <h4 class="scroll__text">Scroll Down</h4>
+                <img src="images/arrow-down.svg" alt="Down Arrow">
+            </a>
         </div>
     </section>
 
-    <section class="location section-margins">
+    <section id="section__location" class="location section-margins">
         <div class="location__wrapper container clearfix">
             <div class="heading location__heading">
                 <h2>Our Location</h2>
             </div>
-            
+
+
             <div class="row location__content">
                 <div class="col-md-4 col-sm-6 center">
                     <img src="images/horizontal-logo.png" alt="Denistry for Kids Logo">
